# cfitsio

./: .gitattributes  .gitignore  BUILDING_WINDLL.txt  CMakeLists.txt  ChangeLog  Licence.txt  Makefile  Makefile.am  Makefile.in  Makefile.shared  ORIG.Makefile  README  README.MacOS  README.filenames  README.shmem  README.win  README.win32  README_WINUSER  Readme.win32  buffers.c  cfileio.c  cfitsio.doc  cfitsio.pc.cmake  cfitsio.pc.in  cfitsio.ps  cfitsio.spec  cfitsio.tex  cfitsio.toc  cfitsio_mac.hqx  cfortran.h  changes.doc  changes.txt  checksum.c  compress.c  compress_fits.c  configure  configure.ac  configure.in  configure.shared  convert.c  (+135 more)
.github/workflows/: build.yml  ci.yml
cmake/: portfile.cmake
docs/: cfitsio.doc  cfitsio.ps  cfitsio.tex  cfitsio.toc  changes.txt  fitsio.doc  fitsio.ps  fitsio.tex  fitsio.toc  fpackguide.odt  quick.ps  quick.tex  quick.toc
licenses/: NASA_Open_Source_Agreement_1.3.txt
utilities/: fitsverify.c  fpackutil.c  ftverify.c  fverify.h  fvrf_data.c  fvrf_file.c  fvrf_head.c  fvrf_key.c  smem.c  speed.c
zlib/: zuncompress.c
